--- a/Tienda/detalleProducto.html
+++ b/Tienda/detalleProducto.html
@@ -15,7 +15,7 @@
 
             <nav class="main-nav">
                 <ul class="nav-list">
-                    <li><a href="Landing.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="Productos.html">Sección productos</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                     <li><a href="Landing.html#sobre-nosotros">Sobre Nosotros</a></li>
