--- a/detalleProducto.html
+++ b/detalleProducto.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <a href="#"><img src="IMG/logo.png" alt="CSGO Skins Store Logo"></a>
+                <a href="#"><img src="img/logo.png" alt="CSGO Skins Store Logo"></a>
             </div>
 
             <nav class="main-nav">
