--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="#"><img src="IMG/logo.png" alt="CSGO Skins Store Logo" /></a>
+          <a href="#"><img src="img/logo.png" alt="CSGO Skins Store Logo" /></a>
         </div>
 
         <nav class="main-nav">
