--- a/Productos.html
+++ b/Productos.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="Productos.html">Sección productos</a></li>
                     <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="Landing.html#sobre-nosotros">Sobre Nosotros</a></li>
+                    <li><a href="index.html#sobre-nosotros">Sobre Nosotros</a></li>
                 </ul>
             </nav>
 
